--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ entrypoints==0.4
 executing==1.2.0
 facexlib==0.2.1.1
 fastjsonschema==2.16.2
-Flask==2.2.2
+Flask~=2.0.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 fonttools==4.28.5
@@ -106,7 +106,7 @@ PyYAML==6.0
 pyzmq==25.0.0
 qtconsole==5.4.0
 QtPy==2.3.0
-requests==2.26.0
+requests~=2.27.1
 requests-oauthlib==1.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -138,7 +138,9 @@ wcwidth==0.2.6
 webcolors==1.12
 webencodings==0.5.1
 websocket-client==1.4.2
-Werkzeug==2.2.2
+Werkzeug~=2.0.3
 widgetsnbextension==4.0.5
 yapf==0.31.0
 zipp==3.12.0
+
+pycountry~=22.3.5
