Cleaned up requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,24 @@
-absl-py==1.0.0
-addict==2.4.0
-anyio==3.6.2
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-attrs==22.2.0
-backcall==0.2.0
-basicsr==1.3.3.3
-beautifulsoup4==4.11.1
-bleach==5.0.1
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.1
-charset-normalizer==2.0.9
-click==8.1.3
-comm==0.1.2
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.6.0
-docutils==0.18.1
-entrypoints==0.4
-executing==1.2.0
-facexlib==0.2.1.1
-fastjsonschema==2.16.2
-Flask~=2.0.3
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.3
-fonttools==4.28.5
-fqdn==1.5.1
-future==0.18.2
--e git+https://github.com/TencentARC/GFPGAN.git@09d82ec6832454da590e5801bbf1804e686ccf0e#egg=gfpgan
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-grpcio==1.43.0
-gunicorn==20.0.4
-idna==3.3
-imageio==2.13.3
-importlib-metadata==6.0.0
-ipykernel==6.20.2
-ipython==8.9.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-events==0.6.3
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.1.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-Kivy==2.1.0
-Kivy-Garden==0.1.5
-kiwisolver==1.3.2
-lmdb==1.2.1
-Markdown==3.3.6
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.6
-mistune==2.0.4
-nbclassic==0.4.8
-nbclient==0.7.2
-nbconvert==7.2.7
-nbformat==5.7.3
-nest-asyncio==1.5.6
-networkx==2.6.3
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.21.4
-oauthlib==3.1.1
-opencv-python==4.5.4.60
-packaging==23.0
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.4.0
-platformdirs==2.6.2
-prometheus-client==0.15.0
-prompt-toolkit==3.0.36
-protobuf==3.19.1
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.14.0
-pyparsing==3.0.6
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.4
-PyWavelets==1.2.0
-PyYAML==6.0
-pyzmq==25.0.0
-qtconsole==5.4.0
-QtPy==2.3.0
-requests~=2.27.1
-requests-oauthlib==1.3.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.8
-scikit-build==0.12.0
-scikit-image==0.19.1
-scipy==1.7.3
-Send2Trash==1.8.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-SQLAlchemy==2.0.4
-stack-data==0.6.2
-tb-nightly==2.8.0a20211218
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-terminado==0.17.1
-tifffile==2021.11.2
-tinycss2==1.2.1
-torch==1.10.1
-torchvision==0.11.2
-tornado==6.2
-tqdm==4.62.3
-traitlets==5.9.0
-typing_extensions==4.5.0
-uri-template==1.2.0
-urllib3==1.26.7
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.4.2
-Werkzeug~=2.0.3
-widgetsnbextension==4.0.5
-yapf==0.31.0
-zipp==3.12.0
-
-pycountry~=22.3.5
+certifi>=2022.12.7
+cffi>=1.15.1
+charset-normalizer>=3.0.1
+click>=8.1.3
+cryptography>=39.0.1
+Flask>=2.2.3
+Flask-Login>=0.6.2
+Flask-SQLAlchemy>=3.0.3
+geographiclib>=2.0
+geopy>=2.3.0
+greenlet>=2.0.2
+idna>=3.4
+importlib-metadata>=6.0.0
+itsdangerous>=2.1.2
+Jinja2>=3.1.2
+MarkupSafe>=2.1.2
+pycountry>=22.3.5
+pycparser>=2.21
+requests>=2.28.2
+SQLAlchemy>=2.0.4
+typing-extensions>=4.5.0
+urllib3>=1.26.14
+Werkzeug>=2.2.3
+zipp>=3.14.0
