--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+aiohttp>=3.8.4
+aiosignal>=1.3.1
+async-timeout>=4.0.2
+asynctest>=0.13.0
+attrs>=22.2.0
+cachetools>=5.3.0
 certifi>=2022.12.7
 cffi>=1.15.1
 charset-normalizer>=3.0.1
@@ -6,14 +12,17 @@ cryptography>=39.0.1
 Flask>=2.2.3
 Flask-Login>=0.6.2
 Flask-SQLAlchemy>=3.0.3
+frozenlist>=1.3.3
 geographiclib>=2.0
 geopy>=2.3.0
 greenlet>=2.0.2
 idna>=3.4
 importlib-metadata>=6.0.0
+ipinfo>=4.4.2
 itsdangerous>=2.1.2
 Jinja2>=3.1.2
 MarkupSafe>=2.1.2
+multidict>=6.0.4
 pycountry>=22.3.5
 pycparser>=2.21
 requests>=2.28.2
@@ -21,4 +30,5 @@ SQLAlchemy>=2.0.4
 typing-extensions>=4.5.0
 urllib3>=1.26.14
 Werkzeug>=2.2.3
+yarl>=1.8.2
 zipp>=3.14.0
