--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 aiohttp>=3.8.4
 aiosignal>=1.3.1
+appnope>=0.1.3
 async-timeout>=4.0.2
 asynctest>=0.13.0
 attrs>=22.2.0
+backcall>=0.2.0
 cachetools>=5.3.0
 certifi>=2022.12.7
 cffi>=1.15.1
 charset-normalizer>=3.0.1
 click>=8.1.3
 cryptography>=39.0.1
+cycler>=0.11.0
+debugpy>=1.6.7
+decorator>=5.1.1
+entrypoints>=0.4
 Flask>=2.2.3
 Flask-Login>=0.6.2
 Flask-SQLAlchemy>=3.0.3
+fonttools>=4.38.0
 frozenlist>=1.3.3
 geographiclib>=2.0
 geopy>=2.3.0
@@ -19,16 +26,51 @@ greenlet>=2.0.2
 idna>=3.4
 importlib-metadata>=6.0.0
 ipinfo>=4.4.2
+ipykernel>=6.16.2
+ipython>=7.34.0
 itsdangerous>=2.1.2
+jedi>=0.18.2
 Jinja2>=3.1.2
+joblib>=1.2.0
+jupyter_client>=7.4.9
+jupyter_core>=4.12.0
+kiwisolver>=1.4.4
 MarkupSafe>=2.1.2
+matplotlib>=3.5.3
+matplotlib-inline>=0.1.6
 multidict>=6.0.4
+nest-asyncio>=1.5.6
+nltk>=3.8.1
+numpy>=1.21.6
+packaging>=23.1
+pandas>=1.3.5
+parso>=0.8.3
+pexpect>=4.8.0
+pickleshare>=0.7.5
+Pillow>=9.5.0
+prompt-toolkit>=3.0.38
+psutil>=5.9.4
+ptyprocess>=0.7.0
 pycountry>=22.3.5
 pycparser>=2.21
+Pygments>=2.15.0
+pyparsing>=3.0.9
+python-dateutil>=2.8.2
+pytz>=2023.3
+pyzmq>=25.0.2
+regex>=2022.10.31
 requests>=2.28.2
+scikit-learn>=1.0.2
+scipy>=1.7.3
+six>=1.16.0
 SQLAlchemy>=2.0.4
-typing-extensions>=4.5.0
+threadpoolctl>=3.1.0
+tornado>=6.2
+tqdm>=4.65.0
+traitlets>=5.9.0
+typing_extensions>=4.5.0
 urllib3>=1.26.14
+wcwidth>=0.2.6
 Werkzeug>=2.2.3
 yarl>=1.8.2
 zipp>=3.14.0
